generated/grammar/FinanceLangParser.py
# Generated from FinanceLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FinanceLangParser ( Parser ):

    grammarFileName = "FinanceLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'crear'", "'operacion'", "'eliminar'", 
                     "'proyectar'", "'mostrar'", "'interes'", "'simple'", 
                     "'compuesto'", "'cuota'", "'mensual'", "'por'", "'a'", 
                     "'meses'", "'con'", "'tasa'", "'+'", "'-'", "'*'", 
                     "'/'", "'('", "')'", "'='", "';'" ]

    symbolicNames = [ "<INVALID>", "CREAR", "OPERACION", "ELIMINAR", "PROYECTAR", 
                      "MOSTRAR", "INTERES", "SIMPLE", "COMPUESTO", "CUOTA", 
                      "MENSUAL", "POR", "A", "MESES", "CON", "TASA", "PLUS", 
                      "MINUS", "MUL", "DIV", "LPAREN", "RPAREN", "ASSIGN", 
                      "SEMI", "ID", "NUMBER", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_createOperation = 2
    RULE_deleteOperation = 3
    RULE_projectOperation = 4
    RULE_showOperation = 5
    RULE_simpleInterestOperation = 6
    RULE_compoundInterestOperation = 7
    RULE_monthlyPaymentOperation = 8
    RULE_expr = 9

    ruleNames =  [ "prog", "stmt", "createOperation", "deleteOperation", 
                   "projectOperation", "showOperation", "simpleInterestOperation", 
                   "compoundInterestOperation", "monthlyPaymentOperation", 
                   "expr" ]

    EOF = Token.EOF
    CREAR=1
    OPERACION=2
    ELIMINAR=3
    PROYECTAR=4
    MOSTRAR=5
    INTERES=6
    SIMPLE=7
    COMPUESTO=8
    CUOTA=9
    MENSUAL=10
    POR=11
    A=12
    MESES=13
    CON=14
    TASA=15
    PLUS=16
    MINUS=17
    MUL=18
    DIV=19
    LPAREN=20
    RPAREN=21
    ASSIGN=22
    SEMI=23
    ID=24
    NUMBER=25
    WS=26
    COMMENT=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FinanceLangParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FinanceLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(FinanceLangParser.StmtContext,i)


        def getRuleIndex(self):
            return FinanceLangParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = FinanceLangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 51511930) != 0):
                self.state = 20
                self.stmt()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(FinanceLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FinanceLangParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StmtShowContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def showOperation(self):
            return self.getTypedRuleContext(FinanceLangParser.ShowOperationContext,0)

        def SEMI(self):
            return self.getToken(FinanceLangParser.SEMI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtShow" ):
                return visitor.visitStmtShow(self)
            else:
                return visitor.visitChildren(self)


    class StmtSimpleInterestContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleInterestOperation(self):
            return self.getTypedRuleContext(FinanceLangParser.SimpleInterestOperationContext,0)

        def SEMI(self):
            return self.getToken(FinanceLangParser.SEMI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtSimpleInterest" ):
                return visitor.visitStmtSimpleInterest(self)
            else:
                return visitor.visitChildren(self)


    class StmtCompoundInterestContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def compoundInterestOperation(self):
            return self.getTypedRuleContext(FinanceLangParser.CompoundInterestOperationContext,0)

        def SEMI(self):
            return self.getToken(FinanceLangParser.SEMI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtCompoundInterest" ):
                return visitor.visitStmtCompoundInterest(self)
            else:
                return visitor.visitChildren(self)


    class StmtExprContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(FinanceLangParser.ExprContext,0)

        def SEMI(self):
            return self.getToken(FinanceLangParser.SEMI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtExpr" ):
                return visitor.visitStmtExpr(self)
            else:
                return visitor.visitChildren(self)


    class StmtCreateContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def createOperation(self):
            return self.getTypedRuleContext(FinanceLangParser.CreateOperationContext,0)

        def SEMI(self):
            return self.getToken(FinanceLangParser.SEMI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtCreate" ):
                return visitor.visitStmtCreate(self)
            else:
                return visitor.visitChildren(self)


    class StmtProjectContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def projectOperation(self):
            return self.getTypedRuleContext(FinanceLangParser.ProjectOperationContext,0)

        def SEMI(self):
            return self.getToken(FinanceLangParser.SEMI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtProject" ):
                return visitor.visitStmtProject(self)
            else:
                return visitor.visitChildren(self)


    class StmtDeleteContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def deleteOperation(self):
            return self.getTypedRuleContext(FinanceLangParser.DeleteOperationContext,0)

        def SEMI(self):
            return self.getToken(FinanceLangParser.SEMI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtDelete" ):
                return visitor.visitStmtDelete(self)
            else:
                return visitor.visitChildren(self)


    class StmtMonthlyPaymentContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def monthlyPaymentOperation(self):
            return self.getTypedRuleContext(FinanceLangParser.MonthlyPaymentOperationContext,0)

        def SEMI(self):
            return self.getToken(FinanceLangParser.SEMI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtMonthlyPayment" ):
                return visitor.visitStmtMonthlyPayment(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = FinanceLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = FinanceLangParser.StmtCreateContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.createOperation()
                self.state = 29
                self.match(FinanceLangParser.SEMI)
                pass

            elif la_ == 2:
                localctx = FinanceLangParser.StmtDeleteContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.deleteOperation()
                self.state = 32
                self.match(FinanceLangParser.SEMI)
                pass

            elif la_ == 3:
                localctx = FinanceLangParser.StmtProjectContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.projectOperation()
                self.state = 35
                self.match(FinanceLangParser.SEMI)
                pass

            elif la_ == 4:
                localctx = FinanceLangParser.StmtShowContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.showOperation()
                self.state = 38
                self.match(FinanceLangParser.SEMI)
                pass

            elif la_ == 5:
                localctx = FinanceLangParser.StmtSimpleInterestContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 40
                self.simpleInterestOperation()
                self.state = 41
                self.match(FinanceLangParser.SEMI)
                pass

            elif la_ == 6:
                localctx = FinanceLangParser.StmtCompoundInterestContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 43
                self.compoundInterestOperation()
                self.state = 44
                self.match(FinanceLangParser.SEMI)
                pass

            elif la_ == 7:
                localctx = FinanceLangParser.StmtMonthlyPaymentContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 46
                self.monthlyPaymentOperation()
                self.state = 47
                self.match(FinanceLangParser.SEMI)
                pass

            elif la_ == 8:
                localctx = FinanceLangParser.StmtExprContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 49
                self.expr(0)
                self.state = 50
                self.match(FinanceLangParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREAR(self):
            return self.getToken(FinanceLangParser.CREAR, 0)

        def OPERACION(self):
            return self.getToken(FinanceLangParser.OPERACION, 0)

        def ID(self):
            return self.getToken(FinanceLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(FinanceLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(FinanceLangParser.ExprContext,0)


        def getRuleIndex(self):
            return FinanceLangParser.RULE_createOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateOperation" ):
                return visitor.visitCreateOperation(self)
            else:
                return visitor.visitChildren(self)




    def createOperation(self):

        localctx = FinanceLangParser.CreateOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(FinanceLangParser.CREAR)
            self.state = 55
            self.match(FinanceLangParser.OPERACION)
            self.state = 56
            self.match(FinanceLangParser.ID)
            self.state = 57
            self.match(FinanceLangParser.ASSIGN)
            self.state = 58
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIMINAR(self):
            return self.getToken(FinanceLangParser.ELIMINAR, 0)

        def OPERACION(self):
            return self.getToken(FinanceLangParser.OPERACION, 0)

        def ID(self):
            return self.getToken(FinanceLangParser.ID, 0)

        def getRuleIndex(self):
            return FinanceLangParser.RULE_deleteOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeleteOperation" ):
                return visitor.visitDeleteOperation(self)
            else:
                return visitor.visitChildren(self)




    def deleteOperation(self):

        localctx = FinanceLangParser.DeleteOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_deleteOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(FinanceLangParser.ELIMINAR)
            self.state = 61
            self.match(FinanceLangParser.OPERACION)
            self.state = 62
            self.match(FinanceLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProjectOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROYECTAR(self):
            return self.getToken(FinanceLangParser.PROYECTAR, 0)

        def ID(self):
            return self.getToken(FinanceLangParser.ID, 0)

        def A(self):
            return self.getToken(FinanceLangParser.A, 0)

        def NUMBER(self):
            return self.getToken(FinanceLangParser.NUMBER, 0)

        def MESES(self):
            return self.getToken(FinanceLangParser.MESES, 0)

        def CON(self):
            return self.getToken(FinanceLangParser.CON, 0)

        def TASA(self):
            return self.getToken(FinanceLangParser.TASA, 0)

        def expr(self):
            return self.getTypedRuleContext(FinanceLangParser.ExprContext,0)


        def getRuleIndex(self):
            return FinanceLangParser.RULE_projectOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProjectOperation" ):
                return visitor.visitProjectOperation(self)
            else:
                return visitor.visitChildren(self)




    def projectOperation(self):

        localctx = FinanceLangParser.ProjectOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_projectOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(FinanceLangParser.PROYECTAR)
            self.state = 65
            self.match(FinanceLangParser.ID)
            self.state = 66
            self.match(FinanceLangParser.A)
            self.state = 67
            self.match(FinanceLangParser.NUMBER)
            self.state = 68
            self.match(FinanceLangParser.MESES)
            self.state = 69
            self.match(FinanceLangParser.CON)
            self.state = 70
            self.match(FinanceLangParser.TASA)
            self.state = 71
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOSTRAR(self):
            return self.getToken(FinanceLangParser.MOSTRAR, 0)

        def ID(self):
            return self.getToken(FinanceLangParser.ID, 0)

        def getRuleIndex(self):
            return FinanceLangParser.RULE_showOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowOperation" ):
                return visitor.visitShowOperation(self)
            else:
                return visitor.visitChildren(self)




    def showOperation(self):

        localctx = FinanceLangParser.ShowOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_showOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(FinanceLangParser.MOSTRAR)
            self.state = 74
            self.match(FinanceLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleInterestOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERES(self):
            return self.getToken(FinanceLangParser.INTERES, 0)

        def SIMPLE(self):
            return self.getToken(FinanceLangParser.SIMPLE, 0)

        def ID(self):
            return self.getToken(FinanceLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(FinanceLangParser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FinanceLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(FinanceLangParser.ExprContext,i)


        def CON(self):
            return self.getToken(FinanceLangParser.CON, 0)

        def TASA(self):
            return self.getToken(FinanceLangParser.TASA, 0)

        def POR(self):
            return self.getToken(FinanceLangParser.POR, 0)

        def NUMBER(self):
            return self.getToken(FinanceLangParser.NUMBER, 0)

        def MESES(self):
            return self.getToken(FinanceLangParser.MESES, 0)

        def getRuleIndex(self):
            return FinanceLangParser.RULE_simpleInterestOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleInterestOperation" ):
                return visitor.visitSimpleInterestOperation(self)
            else:
                return visitor.visitChildren(self)




    def simpleInterestOperation(self):

        localctx = FinanceLangParser.SimpleInterestOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_simpleInterestOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(FinanceLangParser.INTERES)
            self.state = 77
            self.match(FinanceLangParser.SIMPLE)
            self.state = 78
            self.match(FinanceLangParser.ID)
            self.state = 79
            self.match(FinanceLangParser.ASSIGN)
            self.state = 80
            self.expr(0)
            self.state = 81
            self.match(FinanceLangParser.CON)
            self.state = 82
            self.match(FinanceLangParser.TASA)
            self.state = 83
            self.expr(0)
            self.state = 84
            self.match(FinanceLangParser.POR)
            self.state = 85
            self.match(FinanceLangParser.NUMBER)
            self.state = 86
            self.match(FinanceLangParser.MESES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundInterestOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERES(self):
            return self.getToken(FinanceLangParser.INTERES, 0)

        def COMPUESTO(self):
            return self.getToken(FinanceLangParser.COMPUESTO, 0)

        def ID(self):
            return self.getToken(FinanceLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(FinanceLangParser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FinanceLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(FinanceLangParser.ExprContext,i)


        def CON(self):
            return self.getToken(FinanceLangParser.CON, 0)

        def TASA(self):
            return self.getToken(FinanceLangParser.TASA, 0)

        def POR(self):
            return self.getToken(FinanceLangParser.POR, 0)

        def NUMBER(self):
            return self.getToken(FinanceLangParser.NUMBER, 0)

        def MESES(self):
            return self.getToken(FinanceLangParser.MESES, 0)

        def getRuleIndex(self):
            return FinanceLangParser.RULE_compoundInterestOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundInterestOperation" ):
                return visitor.visitCompoundInterestOperation(self)
            else:
                return visitor.visitChildren(self)




    def compoundInterestOperation(self):

        localctx = FinanceLangParser.CompoundInterestOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_compoundInterestOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(FinanceLangParser.INTERES)
            self.state = 89
            self.match(FinanceLangParser.COMPUESTO)
            self.state = 90
            self.match(FinanceLangParser.ID)
            self.state = 91
            self.match(FinanceLangParser.ASSIGN)
            self.state = 92
            self.expr(0)
            self.state = 93
            self.match(FinanceLangParser.CON)
            self.state = 94
            self.match(FinanceLangParser.TASA)
            self.state = 95
            self.expr(0)
            self.state = 96
            self.match(FinanceLangParser.POR)
            self.state = 97
            self.match(FinanceLangParser.NUMBER)
            self.state = 98
            self.match(FinanceLangParser.MESES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MonthlyPaymentOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUOTA(self):
            return self.getToken(FinanceLangParser.CUOTA, 0)

        def MENSUAL(self):
            return self.getToken(FinanceLangParser.MENSUAL, 0)

        def ID(self):
            return self.getToken(FinanceLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(FinanceLangParser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FinanceLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(FinanceLangParser.ExprContext,i)


        def CON(self):
            return self.getToken(FinanceLangParser.CON, 0)

        def TASA(self):
            return self.getToken(FinanceLangParser.TASA, 0)

        def POR(self):
            return self.getToken(FinanceLangParser.POR, 0)

        def NUMBER(self):
            return self.getToken(FinanceLangParser.NUMBER, 0)

        def MESES(self):
            return self.getToken(FinanceLangParser.MESES, 0)

        def getRuleIndex(self):
            return FinanceLangParser.RULE_monthlyPaymentOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMonthlyPaymentOperation" ):
                return visitor.visitMonthlyPaymentOperation(self)
            else:
                return visitor.visitChildren(self)




    def monthlyPaymentOperation(self):

        localctx = FinanceLangParser.MonthlyPaymentOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_monthlyPaymentOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(FinanceLangParser.CUOTA)
            self.state = 101
            self.match(FinanceLangParser.MENSUAL)
            self.state = 102
            self.match(FinanceLangParser.ID)
            self.state = 103
            self.match(FinanceLangParser.ASSIGN)
            self.state = 104
            self.expr(0)
            self.state = 105
            self.match(FinanceLangParser.CON)
            self.state = 106
            self.match(FinanceLangParser.TASA)
            self.state = 107
            self.expr(0)
            self.state = 108
            self.match(FinanceLangParser.POR)
            self.state = 109
            self.match(FinanceLangParser.NUMBER)
            self.state = 110
            self.match(FinanceLangParser.MESES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FinanceLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprNegContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(FinanceLangParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(FinanceLangParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNeg" ):
                return visitor.visitExprNeg(self)
            else:
                return visitor.visitChildren(self)


    class ExprAddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FinanceLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(FinanceLangParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(FinanceLangParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(FinanceLangParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAddSub" ):
                return visitor.visitExprAddSub(self)
            else:
                return visitor.visitChildren(self)


    class ExprParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(FinanceLangParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(FinanceLangParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(FinanceLangParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprParens" ):
                return visitor.visitExprParens(self)
            else:
                return visitor.visitChildren(self)


    class ExprIdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(FinanceLangParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprId" ):
                return visitor.visitExprId(self)
            else:
                return visitor.visitChildren(self)


    class ExprNumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(FinanceLangParser.NUMBER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNum" ):
                return visitor.visitExprNum(self)
            else:
                return visitor.visitChildren(self)


    class ExprMulDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FinanceLangParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FinanceLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(FinanceLangParser.ExprContext,i)

        def MUL(self):
            return self.getToken(FinanceLangParser.MUL, 0)
        def DIV(self):
            return self.getToken(FinanceLangParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMulDiv" ):
                return visitor.visitExprMulDiv(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = FinanceLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                localctx = FinanceLangParser.ExprNegContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 113
                self.match(FinanceLangParser.MINUS)
                self.state = 114
                self.expr(6)
                pass
            elif token in [20]:
                localctx = FinanceLangParser.ExprParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 115
                self.match(FinanceLangParser.LPAREN)
                self.state = 116
                self.expr(0)
                self.state = 117
                self.match(FinanceLangParser.RPAREN)
                pass
            elif token in [24]:
                localctx = FinanceLangParser.ExprIdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 119
                self.match(FinanceLangParser.ID)
                pass
            elif token in [25]:
                localctx = FinanceLangParser.ExprNumContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 120
                self.match(FinanceLangParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)
